# study-stream

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/bruno_tests/: current user.bru  downvote.bru  get notes.bru  login.bru  logout.bru  post image.bru  post text.bru  signup.bru
backend/notes/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/notes/bruno_tests/: bruno.json  downvote.bru  get notes.bru  get one note.bru  login.bru  new access token.bru  post image.bru  post text.bru  signup.bru  upvote.bru
backend/userauth/: urls.py
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  CreatePostPage.tsx  Header.css  Header.tsx  ImagePostPage.tsx  LoginPage.tsx  SignUpPage.tsx  SingleNotePage.tsx  TextPostPage.tsx  main.tsx
client/src/components/: CustomTextLink.tsx  ListGroup.tsx  SidebarButton.tsx  VoteButtons.css  VoteButtons.tsx
client/src/pages/: AuthLoader.tsx  CreateProject.tsx  Dashboard.tsx  Explore.tsx  Landing.tsx  LandingAndLogin.tsx  LoggedInLayout.tsx  LoggedInTemp.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Signup.tsx
client/src/redux/: store.ts
client/src/route_protectors/: LoggedInProtector.tsx  LoggedOutProtector.tsx
client/src/store/: store.ts  userSlice.ts
client/src/utils/: utils.ts  vars.ts
client/studyStreamUI/: package-lock.json  package.json  vite.config.ts
client/studyStreamUI/src/: App.css  App.tsx  CreatePostPage.tsx  Header.css  ImagePostPage.tsx  LoginPage.tsx  (+5 more)
