[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth[with-social]>=7.0.1",
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "pillow>=11.1.0",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.0.0",
    "werkzeug>=3.1.3",
]
